overflow fixed

--- a/CSS/page1Style.css
+++ b/CSS/page1Style.css
@@ -94,6 +94,7 @@ main{
     background-position: center;
     height: 75%;
     overflow-y: scroll;
+    overflow-x: hidden;
 }
 
 .main-box{
